# term-phys

./: .clangd  .gitignore  CMakeLists.txt
include/Core/: Clock.hpp  Console.hpp  Object.hpp  Scene.hpp  Shape.hpp
include/Geometry/: Angle.hpp  Point.hpp  Vector.hpp
include/Physics/: Physics.hpp
include/Rendering/: Renderer.hpp
include/core/: Clock.hpp  Object.hpp  Physics.hpp  Scene.hpp
include/geometry/: Angle.hpp  Circle.hpp  Line.hpp  Point.hpp  Polygon.hpp  Shape.hpp  Vector2D.hpp
include/rendering/: Camera.hpp  Color.hpp  Renderer.hpp
src/: main.cpp
src/Core/: Clock.cpp  Console.cpp  Object.cpp  Scene.cpp  Shape.cpp
src/Geometry/: Angle.cpp  Vector.cpp
src/Physics/: Physics.cpp
src/Rendering/: Camera.cpp  Renderer.cpp
src/core/: Clock.cpp  Object.cpp  Physics.cpp  Scene.cpp
src/geometry/: Angle.cpp  Circle.cpp  Line.cpp  Point.cpp  Polygon.cpp  Vector2D.cpp
src/rendering/: Renderer.cpp  renderer.cpp
tests/: test_Angle.cpp  test_Vector2D.cpp
tests/Geometry/: test_Angle.cpp
